--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 */ServicioCliente/node_modules
 /ServicioRastreo/node_modules
 */ServicioRastreo/node_modules
+/ServicioRastreo/node_modules
+*/ServicioRastreo/node_modules
+/ServicioConductor/node_modules
+*/ServicioConductor/node_modules
