--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 */ServicioRastreo/node_modules
 /ServicioConductor/node_modules
 */ServicioConductor/node_modules
+/ESB/node_modules
+*/ESB/node_modules
